# tuxcap

./: .gitignore  AUTHORS  Android.mk  CHANGELOG  CMakeLists.txt  COPYRIGHT  PopCap Framework License.txt  README  TODO
src/: CMakeDemo.txt  CMakeLists.txt  CMakePycapDemo.txt  resgen.py
src/CMakeMacros/: IJMacros.txt  SetupDemo.txt
src/CMakeModules/: FindSDL2.cmake  FindSDL2_image.cmake
src/chipmunk/: cpJoint.c  cpJoint.h
src/demo1/: Board.cpp  CMakeLists.txt  GameApp.cpp  GameApp.h
src/demo2/: Board.h  CMakeLists.txt  GameApp.cpp  GameApp.h
src/demo3/: Board.cpp  Board.h  CMakeLists.txt  GameApp.cpp
src/demo4/: Board.h  CMakeLists.txt  GameApp.cpp  GameApp.h  TitleScreen.cpp  TitleScreen.h  main.cpp
src/demo5/: Board.cpp  Board.h  CMakeLists.txt  DemoDialog.cpp  DemoDialog.h  GameApp.cpp  GameApp.h  Res.cpp  TitleScreen.cpp  TitleScreen.h
src/hgeparticle/: LICENSE.TXT  hgeRandom.cpp  hgeRandom.h  hgecolor.h  hgeparticle.cpp  hgeparticle.h  hgepmanager.cpp  hgerect.cpp  hgerect.h  hgevector.cpp  hgevector.h
src/hungarr/: Board.cpp  Board.h  CMakeLists.txt  GameApp.cpp  GameApp.h  GameOverEffect.cpp  GameOverEffect.h  LevelupEffect.cpp  LevelupEffect.h  OptionsDialog.cpp  OptionsDialog.h  Res.cpp  Res.h  TitleScreen.cpp  TitleScreen.h  main.cpp
src/include/: AudiereSoundInstance.h  BltRotatedHelper.inc  ButtonListener.h  ButtonWidget.h  Checkbox.h  CheckboxListener.h  Color.h  Common.h  CursorWidget.h  D3DInterface.h  DDI_Additive.inc  DDI_AlphaBlt.inc  DDI_BltRotated_Additive.inc  DDI_FastBlt_NoAlpha.inc  DDI_FastStretch.inc  DDI_FastStretch_Additive.inc  DDI_NormalBlt_Volatile.inc  DDImage.h  DDInterface.h  Dialog.h  DialogListener.h  EditListener.h  EditWidget.h  Flags.h  Font.h  GENERIC_DrawLineAA.inc  Graphics.h  HyperlinkWidget.h  Image.h  ImageFont.h  ImageLib.h  Insets.h  KeyCodes.h  ListListener.h  ListWidget.h  MI_AdditiveBlt.inc  MI_BltRotated_Additive.inc  MI_GetNativeAlphaData.inc  MI_GetRLAlphaData.inc  MI_NormalBlt.inc  (+31 more)
src/lib/: AudiereLoader.cpp  AudiereMusicInterface.cpp  AudiereMusicInterface.h  AudiereSoundInstance.cpp  AudiereSoundInstance.h  AudiereSoundManager.cpp  AudiereSoundManager.h  BltRotatedHelper.inc  Buffer.cpp  Buffer.h  ButtonListener.h  ButtonWidget.cpp  ButtonWidget.h  CMakeLists.txt  Checkbox.cpp  Checkbox.h  CheckboxListener.h  Color.cpp  Color.h  CommandLine.cpp  CommandLine.h  Common.cpp  Common.h  CursorWidget.cpp  CursorWidget.h  D3DInterface.cpp  D3DInterface.h  DDI_Additive.inc  DDI_AlphaBlt.inc  DDI_BltRotated.inc  DDI_BltRotated_Additive.inc  DDI_FastBlt_NoAlpha.inc  DDI_FastStretch.inc  DDI_FastStretch_Additive.inc  DDI_NormalBlt_Volatile.inc  DDImage.cpp  DDImage.h  DDInterface.cpp  DDInterface.h  DXTTexture.cpp  (+130 more)
src/particledemo/: CMakeLists.txt  GameApp.h
src/physicsdemo/: Board.h  CMakeLists.txt
src/physicsdemo2/: Board.h  CMakeLists.txt  main.cpp
src/physicsdemo3/: CMakeLists.txt
src/physicsdemo4/: CMakeLists.txt  GameApp.cpp
src/physicsdemo5/: Board.cpp  CMakeLists.txt
src/physicsdemo6/: Board.cpp  Board.h  CMakeLists.txt  GameApp.cpp
src/physicsdemo7/: CMakeLists.txt
src/pycap/: PycapApp.cpp  PycapApp.h  PycapApp.h.bak  PycapBoard.cpp  PycapBoard.cpp.bak  PycapBoard.h  PycapResources.cpp  PycapResources.h  main.cpp
src/pythondemo1/: CMakeLists.txt  game.py  main.cpp
src/pythondemo2/: CMakeLists.txt  game.py  main.cpp
src/pythondemo_template/: CMakeLists.txt  main.cpp
src/tuxpak/: CMakeLists.txt  tuxpak.cpp
tuxcap/: CMakeLists.txt
tuxcap/CMakeModules/: FindAudiereLib.cmake  FindChipmunkLib.cmake  FindImageMagickLib.cmake
tuxcap/chipmunk/: CMakeLists.txt  chipmunk.h  cpBB.h  cpBody.c  cpJoint.c  cpPolyShape.c  cpSpace.c
tuxcap/demo1/: Board.cpp  Board.h  CMakeLists.txt  GameApp.cpp
tuxcap/demo2/: Board.cpp  CMakeLists.txt  GameApp.cpp  main.cpp
tuxcap/demo3/: CMakeLists.txt  GameApp.cpp  GameApp.h
tuxcap/demo4/: Board.cpp  CMakeLists.txt  GameApp.cpp
tuxcap/demo5/: Board.cpp  CMakeLists.txt  DemoDialog.cpp  DemoDialog.h  GameApp.cpp  GameApp.h  TitleScreen.h
tuxcap/hgeparticle/: CMakeLists.txt  hgeRandom.cpp  hgecolor.h  hgeparticle.cpp  hgeparticle.h  hgepmanager.cpp  hgevector.cpp
tuxcap/hungarr/: Board.cpp  CMakeLists.txt  GameApp.cpp  GameApp.h  GameOverEffect.cpp  GameOverEffect.h  LevelupEffect.cpp  OptionsDialog.cpp  Res.h  TitleScreen.cpp
tuxcap/include/: AudiereLoader.h  AudiereMusicInterface.h  AudiereSoundInstance.h  AudiereSoundManager.h  BltRotatedHelper.inc  Buffer.h  ButtonWidget.h  CImg.h  Color.h  Common.h  D3DInterface.h  DDI_Additive.inc  DDI_AlphaBlt.inc  DDI_BltRotated.inc  DDI_BltRotated_Additive.inc  DDI_FastBlt_NoAlpha.inc  DDI_FastStretch.inc  DDI_FastStretch_Additive.inc  DDI_NormalBlt_Volatile.inc  DDImage.h  DDInterface.h  DescParser.h  DialogButton.h  EditListener.h  Flags.h  GENERIC_DrawLineAA.inc  Graphics.h  ImageFont.h  ImageLib.h  KeyCodes.h  MI_AdditiveBlt.inc  MI_BltRotated.inc  MI_BltRotated_Additive.inc  MI_GetNativeAlphaData.inc  MI_NormalBlt.inc  MI_SlowStretchBlt.inc  MTRand.h  MemoryImage.h  NativeDisplay.h  ParticlePhysicsSystem.h  (+23 more)
tuxcap/lib/: AudiereLoader.cpp  AudiereMusicInterface.cpp  AudiereSoundInstance.cpp  AudiereSoundManager.cpp  Buffer.cpp  ButtonWidget.cpp  CMakeLists.txt  Checkbox.cpp  Color.cpp  Common.cpp  CursorWidget.cpp  D3DInterface.cpp  DDImage.cpp  DDInterface.cpp  DescParser.cpp  DialogButton.cpp  EditWidget.cpp  Graphics.cpp  Image.cpp  ImageFont.cpp  ImageLib.cpp  KeyCodes.cpp  ListWidget.cpp  MTRand.cpp  MemoryImage.cpp  MusicInterface.cpp  ParticlePhysicsSystem.cpp  Physics.cpp  PropertiesParser.cpp  Ratio.cpp  Res.cpp  ResourceManager.cpp  SDLMixerMusicInterface.cpp  SDLMixerSoundInstance.cpp  SDLMixerSoundManager.cpp  SWTri.cpp  SWTri_DrawTriangle.cpp  SWTri_DrawTriangleInc1.cpp  SWTri_DrawTriangleInc2.cpp  SWTri_GetTexel.cpp  (+14 more)
tuxcap/particledemo/: Board.cpp  Board.h  CMakeLists.txt  GameApp.cpp
tuxcap/physicsdemo/: Board.cpp  Board.h  CMakeLists.txt  GameApp.cpp  GameApp.h
tuxcap/physicsdemo2/: Board.cpp  Board.h  CMakeLists.txt  GameApp.cpp
tuxcap/physicsdemo3/: Board.cpp  Board.h  (+2 more)
(+51 files in other folders)
