SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(tuxpak)
ADD_SUBDIRECTORY(demo1)
ADD_SUBDIRECTORY(demo2)
ADD_SUBDIRECTORY(demo3)
ADD_SUBDIRECTORY(demo4)
ADD_SUBDIRECTORY(demo5)
ADD_SUBDIRECTORY(hungarr)
ADD_SUBDIRECTORY(particledemo)
ADD_SUBDIRECTORY(physicsdemo)
ADD_SUBDIRECTORY(physicsdemo2)
ADD_SUBDIRECTORY(physicsdemo3)
ADD_SUBDIRECTORY(physicsdemo4)
ADD_SUBDIRECTORY(physicsdemo5)
ADD_SUBDIRECTORY(physicsdemo6)
ADD_SUBDIRECTORY(physicsdemo7)
